--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ asgiref==3.5.2
 astroid==2.12.13
 certifi==2022.9.24
 charset-normalizer==2.1.1
+colorama==0.4.6
 decorator==5.1.1
 dill==0.3.6
 Django==4.1.2
+djangorestframework==3.14.0
 gunicorn==20.1.0
 idna==3.4
 isort==5.10.1
@@ -18,6 +20,7 @@ psycopg2==2.9.5
 pylint==2.15.6
 pylint-django==2.5.3
 pylint-plugin-utils==0.7
+pytz==2023.3
 requests==2.28.1
 sqlparse==0.4.3
 tomli==2.0.1
